--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+
 *{
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 
@@ -200,7 +202,7 @@
 .thirdcontainer img{
     width: 100%;
     height: 720px;
-    margin-top: -95px;
+    margin-top: -100px;
     position: absolute;
     z-index: 1;
 }
@@ -563,7 +565,7 @@
     display: flex;
     gap: 20px;
     justify-content: center;
-    margin-top: 560px;
+    margin-top: 550px;
     position: relative;
     z-index: 2;
 }
@@ -594,6 +596,7 @@
 .tenthcontainer img{
     width: 100%;
     height: 720px;
+    margin-top: 50px;
 
 }
 
@@ -623,4 +626,26 @@
     height: 40px;
     border: none;
     border-radius: 5px;
+}
+
+.footer{
+    margin-top: 30px;
+    width: 100%;
+    height: 70px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+}
+
+.footerone{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.footerone a{
+    text-decoration: none;
+    color: white;
 }
