--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
     position: absolute;
     width: 100%;
     height: 720px;
+    object-fit: cover;
 }
 
 .navbar{
@@ -394,6 +395,7 @@
 .sixthcontainer video{
     width: 100%;
     height: 720px;
+    object-fit: cover;
 }
 
 .sixthcontainer button{
